--- a/CSS/HOME page.css
+++ b/CSS/HOME page.css
@@ -13,7 +13,7 @@ body {
 }
 
 .hero {
-  background: url(/images/image\ 1.png);
+  background: url(./images/image\ 1.png);
   width: 100%;
   height: 120vh;
   background-size: cover;
